--- a/CheapUpscaler.Blazor/CheapUpscaler.Blazor.csproj
+++ b/CheapUpscaler.Blazor/CheapUpscaler.Blazor.csproj
@@ -4,7 +4,22 @@
     <TargetFramework>net10.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <OutputType>Exe</OutputType>
     <BlazorDisableThrowNavigationException>true</BlazorDisableThrowNavigationException>
   </PropertyGroup>
+
+  <ItemGroup>
+    <!-- Desktop framework with Avalonia + Photino + Blazor -->
+    <PackageReference Include="CheapAvaloniaBlazor" Version="1.1.3" />
+    <!-- UI component library -->
+    <PackageReference Include="MudBlazor" Version="8.15.0" />
+    <!-- Database for job persistence -->
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="10.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <!-- Core upscaling services -->
+    <ProjectReference Include="..\CheapUpscaler.Core\CheapUpscaler.Core.csproj" />
+  </ItemGroup>
 
 </Project>
