--- a/CheapUpscaler.Worker/appsettings.Development.json
+++ b/CheapUpscaler.Worker/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "Worker": {
-    "DataPath": "",
+    "DataPath": "./data",
     "InputPath": "./input",
     "OutputPath": "./output",
     "WatchFolderEnabled": true
