--- a/CheapUpscaler.Worker/appsettings.json
+++ b/CheapUpscaler.Worker/appsettings.json
@@ -16,7 +16,7 @@
   },
   "AllowedHosts": "*",
   "Worker": {
-    "DataPath": "",
+    "DataPath": "/data/db",
     "InputPath": "/data/input",
     "OutputPath": "/data/output",
     "MaxConcurrentJobs": 1,
