1. Worker Program.cs - Added Blazor Server support:     - AddRazorComponents().AddInteractiveServerComponents()     - AddMudServices()     - Registered web platform services (WebFileDialogService, WebSystemService, WorkerHardwareService)     - Added MapRazorComponents<App>()   2. Worker Blazor Components:     - Components/App.razor - Blazor entry point     - Components/Routes.razor - Router configuration     - Components/_Imports.razor - Shared using directives   3. Worker Services:     - WorkerSettingsService.cs - Settings persistence for Docker     - WorkerVideoInfoService.cs - FFmpeg-based video info (no Windows dependencies)     - WorkerDependencyChecker.cs - Simplified dependency checks for Linux     - WorkerHardwareService.cs - Container-aware hardware detection     - Updated WorkerQueueService.cs to implement IUpscaleQueueService   4. Components Library:     - Added IHardwareService.cs interface for cross-platform hardware detection     - Updated HardwareInfoCard.razor to use interface instead of concrete class   5. Blazor Desktop:     - Cleaned up duplicate files (removed old Pages, Layout, Shared, Models folders)     - Created DesktopHardwareService.cs     - Fixed service registrations

--- a/CheapUpscaler.Blazor/CheapUpscaler.Blazor.csproj
+++ b/CheapUpscaler.Blazor/CheapUpscaler.Blazor.csproj
@@ -25,6 +25,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <!-- Shared UI components library -->
+    <ProjectReference Include="..\CheapUpscaler.Components\CheapUpscaler.Components.csproj" />
     <!-- Core upscaling services -->
     <ProjectReference Include="..\CheapUpscaler.Core\CheapUpscaler.Core.csproj" />
     <!-- Shared models, data layer, and platform abstractions -->
