- CheapUpscaler.Blazor.csproj: ProjectReference → PackageReference 2.0.0, remove AddRazorSupportForMvc   - Components/App.razor: Now HTML document root with blazor.web.js and @rendermode   - Components/Routes.razor: New router component (extracted from old App.razor)   - Components/_Host.cshtml: Deleted (replaced by App.razor)   - Program.cs: Register DesktopFileBrowserService   - Services/DesktopFileBrowserService.cs: New desktop file browser implementation   - TODO.md: Document blazor.server.js 404 fix history

--- a/CheapUpscaler.Blazor/CheapUpscaler.Blazor.csproj
+++ b/CheapUpscaler.Blazor/CheapUpscaler.Blazor.csproj
@@ -5,7 +5,6 @@
     <TargetFramework>net10.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
     <OutputType>WinExe</OutputType>
     <BlazorDisableThrowNavigationException>true</BlazorDisableThrowNavigationException>
 
@@ -14,8 +13,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
+  </ItemGroup>
+
+  <ItemGroup>
     <!-- Desktop framework with Avalonia + Photino + Blazor -->
-    <PackageReference Include="CheapAvaloniaBlazor" Version="1.2.0" />
+    <PackageReference Include="CheapAvaloniaBlazor" Version="2.0.0" />
     <!-- UI component library -->
     <PackageReference Include="MudBlazor" Version="8.15.0" />
     <!-- Database for job persistence -->
