--- a/.github/workflows/pr-review.yml
+++ b/.github/workflows/pr-review.yml
@@ -89,15 +89,19 @@ jobs:
         # Build the review prompt
         PROMPT="You are an expert code reviewer for C#, .NET, Blazor, and Avalonia projects. This is CheapUpscaler - an AI video upscaling desktop application using CheapAvaloniaBlazor framework.
 
-        Review this pull request and provide:
+        Review this pull request. Be extremely concise - only flag things that actually matter.
 
-        1. **Summary**: Brief overview of changes
-        2. **Code Quality**: Assessment of code organization, patterns, and best practices
-        3. **Potential Issues**: Security concerns, bugs, performance issues, or breaking changes
-        4. **Recommendations**: Suggestions for improvements
-        5. **Verdict**: APPROVE, REQUEST CHANGES, or COMMENT
+        Format your review as:
+        1. **Summary** (1-2 sentences max)
+        2. **Issues** (only bugs, security problems, deadlocks, resource leaks, or breaking changes - skip this section entirely if none found)
+        3. **Verdict**: APPROVE, REQUEST CHANGES, or COMMENT
 
-        Be constructive, concise, and focus on important issues. Use markdown formatting.
+        Rules:
+        - Do NOT comment on style, naming, or minor preferences
+        - Do NOT suggest nice-to-have improvements or refactors
+        - Do NOT praise code or add filler text
+        - Only raise issues you are confident are real problems
+        - If everything looks fine, just say so in 1-2 lines and approve
 
         ---
 
